<resources>
    <string name="app_name">Test App</string>

    <string name="main_title">Star Ship</string>

    <string name="reply_title">Receive Reply:</string>
    <string name="reply_msg">Reply Message</string>

    <string name="editText_main">Transport Object</string>

    <string name="button_trans_confirm">Transport</string>
    <string name="button_trans_perform">Energize</string>

    <string name="prefix_receive_msg">Received:&#160;</string>
    <string name="editText_second">Transport Back</string>
    <string name="button_back">Back to ship</string>

    <string name="show_toast">Show Toast</string>
    <string name="toast_message_1">Make it so.</string>
    <string name="toast_message_2">Engage.</string>

    <string name="article_title">Star Trek</string>
    <string name="article_subtitle">From Wiki</string>
    <string name="article_text">
https://en.wikipedia.org/wiki/Star_Trek
\n
\n
<b><i>Star Trek</i></b> is an American media franchise based on the science fiction television series created by Gene Roddenberry. The first television series, simply called Star Trek and now referred to as "The Original Series", debuted in 1966 and aired for three seasons on NBC. It followed the interstellar adventures of Captain James T. Kirk (William Shatner) and his crew aboard the starship USS Enterprise, a space exploration vessel built by the United Federation of Planets in the 23rd century. The Star Trek canon includes The Original Series, an animated series, five spin-off television series, the film franchise, and further adaptations in several media.
\n
In creating Star Trek, Roddenberry was inspired by the Horatio Hornblower novels, the satirical book Gulliver\'s Travels, and Westerns such as the television series Wagon Train. These adventures continued in the 22-episode Star Trek: The Animated Series and six feature films. Five other television series were eventually produced: Star Trek: The Next Generation follows the crew of a new starship Enterprise, set a century after the original series; Star Trek: Deep Space Nine and Star Trek: Voyager are set contemporaneously with The Next Generation, and Enterprise is set before the original series in the early days of human interstellar travel. The most recent Star Trek TV series, entitled Star Trek: Discovery, aired exclusively on the digital platform CBS All Access. The adventures of The Next Generation crew continued in four additional feature films. In 2009, the film franchise underwent a "reboot" set in an alternate timeline, or "Kelvin Timeline," entitled simply Star Trek. This film featured a new cast portraying younger versions of the crew from the original show; their adventures were continued in Star Trek Into Darkness (2013). Its sequel, Star Trek Beyond (2016), was released to coincide with the franchise\'s 50th anniversary.
\n
Star Trek has been a cult phenomenon for decades.[1] Fans of the franchise are called Trekkies or Trekkers. The franchise spans a wide range of spin-offs including games, figurines, novels, toys, and comics. Star Trek had a themed attraction in Las Vegas that opened in 1998 and closed in September 2008. At least two museum exhibits of props travel the world. The series has its own full-fledged constructed language, Klingon. Several parodies have been made of Star Trek. In addition, viewers have produced several fan productions. As of July 2016, the franchise had generated $10 billion in revenue, making Star Trek one of the highest-grossing media franchises of all time.[2]
\n
Star Trek is noted for its cultural influence beyond works of science fiction.[3] The franchise is also noted for its progressive civil rights stances.[4] The Original Series included one of television\'s first multiracial casts. Star Trek references may be found throughout popular culture from movies such as the submarine thriller Crimson Tide to the animated series South Park.
    </string>
</resources>
